--- a/templates/mobile.html
+++ b/templates/mobile.html
@@ -77,7 +77,7 @@
 
 
         // --- Config ---
-        const SERVER_URL = `http://${window.location.hostname}:${window.location.port}`;
+        const SERVER_URL = `${window.location.hostname}:${window.location.port}`;
         const TARGET_SAMPLE_RATE = 16000;
         const WORKLET_PROCESSOR_NAME = 'audio-processor';
         const WORKLET_PATH = '/static/audio-processor.js';
